@@ -944,19 +944,17 @@ else
       # -+ means to accept C++ comments in MSVC's include files.
       # _MSC_VER=1000 _M_IX86=500 means to simulate msvc4 on i586.
       # _MSC_VER=1100 _M_IX86=500 means to simulate msvc5 on i586.
-      # DEBUG_OS_ERROR is for debugging. ??
       if [ $COMPILER = msvc4 ] ; then
-        XCPP="$XCPP -+ -D_MSC_VER=1000 -D_M_IX86=500 -D_WIN32 -DDEBUG_OS_ERROR -I\$(MSVCDIR)/include"
+        XCPP="$XCPP -+ -D_MSC_VER=1000 -D_M_IX86=500 -D_WIN32 -I\$(MSVCDIR)/include"
       fi
       if [ $COMPILER = msvc5 ] ; then
-        XCPP="$XCPP -+ -D_MSC_VER=1100 -D_M_IX86=500 -D_WIN32 -D_INTEGRAL_MAX_BITS=64 -DDEBUG_OS_ERROR -I\$(MSVCDIR)/include"
+        XCPP="$XCPP -+ -D_MSC_VER=1100 -D_M_IX86=500 -D_WIN32 -D_INTEGRAL_MAX_BITS=64 -I\$(MSVCDIR)/include"
       fi
     fi
     if [ $TSYS = win32bc ] ; then
       # -+ means to accept C++ comments in BC's include files.
       # -D__BORLANDC__=0x460 -D__TURBOC__=0x460 -D_M_IX86=300 -D__WIN32__ -D__FLAT__ means to simulate BC5 on i386.
-      # DEBUG_OS_ERROR is for debugging. ??
-      XCPP="$XCPP -+ -D__BORLANDC__=0x460 -D__TURBOC__=0x460 -D_M_IX86=300 -D__WIN32__ -D__FLAT__ -DDEBUG_OS_ERROR -I\$(BCDIR)/include"
+      XCPP="$XCPP -+ -D__BORLANDC__=0x460 -D__TURBOC__=0x460 -D_M_IX86=300 -D__WIN32__ -D__FLAT__ -I\$(BCDIR)/include"
     fi
   fi
   if [ $TSYS = sun4 -a $CROSS = false ] ; then
@@ -1106,6 +1104,7 @@ if [ "$DEBUGGING" = debug ] ; then
   else
     XCFLAGS=$XCFLAGS' -g'
   fi
+  XCFLAGS=$XCFLAGS' -DDEBUG_OS_ERROR';
 fi
 
 if [ $HSYS = acorn ] ; then
